##      ##  ##    ######    ##      ##    ####  ####      ######      ######      ######
##      ##  ##  ##          ##      ##  ##    ##    ##  ##      ##  ##      ##  ##      ##
##########  ##  ##      ##  ##########  ##    ##    ##  ##      ##  ##      ##  ##      ##
##      ##  ##  ##      ##  ##      ##  ##    ##    ##  ##      ##  ##      ##  ##      ##
##      ##  ##    ########  ##      ##  ##    ##    ##    ######      ######    ##      ##

HighMoon - Duell im All.
Copyright (c) 2005, Patrick Gerdsmeier <patrick@gerdsmeier.net>

18. Januar 2005:
----------------
HighMoon v1.0.1 - New structure for sourcecode, speed-improvements, new
spaceship-animations, multilinguality (english/german). Translation of the
README etc. Added some blackholes that have gravity but cannot destroy shoot.
Added some wormholes that can warp the shoot.

HighMoon v1.0.1 - Neustrukturierung der Quellen, Geschwindigkeitsverbesserungen,
neue Ufo-Animation, Mehrsprachigkeit (Englisch/Deutsch). Uebersetzung 
der README etc. Einbau von schwarzen Loechern, die ein Gravitationsfeld haben,
den Schuss aber nicht zerstoeren koennen. Wurmloecher warpen den Schuss an
eine andere Stelle.

14. Januar 2005:
----------------
HighMoon v1.0 - First Release. With computeropponents and sound.

HighMoon v1.0 - Erstes Release. Mit Computergegner und Sound.