@@ -7,6 +7,14 @@
 HighMoon - Duell im All.
 Copyright (c) 2005, Patrick Gerdsmeier <patrick@gerdsmeier.net>
 
+19. Januar 2005:
+----------------
+HighMoon v1.0.2 - Fixed some small bugs and graphics.
+Toggle Sound on/off. Code cleanup.
+
+HighMoon v1.0.2 - Kleinere Bugs behoben und Grafiken
+geandert. Sound an/aus. Code aufgeraeumt.
+
 18. Januar 2005:
 ----------------
 HighMoon v1.0.1 - New structure for sourcecode, speed-improvements, new
